feat(user): add user api docs
